discussion/kv_engine/176433/176433_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make RangeScan duration and buffering dynamic

Add "set" paths for changing the runtime value of:

* range_scan_read_buffer_send_size

This value is read from the config when a new scan is created, existing
scans do not pick-up the change.

* range_scan_max_lifetime

This value is push through by a change-listener to the range scan code.
New values take affect when the timeout task is scheduled.

These are deliberately not documented in cbepctl

Change-Id: I578ba6dd35fe6859667468473a53159445d9e167

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-08-16 09:27:31.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-08-16 10:10:24.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19487/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18: error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
        collector.addStat(std::string_view(key.data(), key.size()), statValue);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.h:19:7: note: forward declaration of "StatCollector"
class StatCollector;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19487/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19487/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48383/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
..\kv_engine\engines\ep\tests\ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
(406 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/48383/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40652/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/range_scans/range_scan_callbacks.cc:84:18:
error: member access into incomplete type "const StatCollector"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40652/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20680/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T10:02:27.946Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T10:02:27.946Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T10:02:27.946Z] (70 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20680/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9274/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T09:41:59.718Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T09:41:59.718Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T09:41:59.718Z] (16 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9274/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21424/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T10:07:14.625Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T10:07:14.625Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T10:07:14.625Z] (16 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21424/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21776/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T09:44:53.704Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T09:44:53.704Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T09:44:53.704Z] (60 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21776/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22498/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T09:50:51.858Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T09:50:51.858Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T09:50:51.858Z] (402 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22498/ )

Failure of GoogleTest "TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonNo_SnappyNo_AlwaysBufferYes":

<pre>
[ RUN      ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonNo_SnappyNo_AlwaysBufferYes
[2022-08-16T09:57:02.991Z] unknown file: Failure
[2022-08-16T09:57:02.991Z] C++ exception with description "MemcachedConnection::recvDcpBufferAck: Unexpected buffer bytes:0 expected:61" thrown in the test body.
[2022-08-16T09:57:02.991Z] [  FAILED  ] TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonNo_SnappyNo_AlwaysBufferYes, where GetParam() = (Mcbp, XattrYes, 4-byte object <01-00 00-00>, 4-byte object <01-00 00-00>, 4-byte object <00-00 00-00>) (34 ms)
TransportProtocols/DcpConsumerBufferAckTest.DeleteWithManyCompressibleXattrs/Mcbp_XattrYes_JsonNo_SnappyNo_AlwaysBufferYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22498/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29802/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/161]: test_MB-19687_fixed...Unexpected stat: ep_range_scan_read_buffer_send_size from stat group 
[2022-08-16T09:55:41.576Z] Unexpected stat: ep_range_scan_read_buffer_send_size from stat group config
[2022-08-16T09:55:41.576Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7824 Test failed: `stats error" (missing stats)
[2022-08-16T09:55:41.576Z] (240 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29802/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18698/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9177/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
